[package]
name = "spin_on"
version = "0.1.1"
authors = ["paulkernfeld <me@paulkernfeld.com>"]
edition = "2018"
description = "A simple, inefficient Future executor"
license = "Apache-2.0 OR MIT"
categories = ["asynchronous", "no-std"]
exclude = ["/Makefile.toml"]
repository = "https://github.com/paulkernfeld/spin_on"
